Add AnswerOption.java to replace String in Question.java
- Add AnswerOptionRepository.java
- Change field signatures in GameSummary and adjust affected code
- Add answer_option table to database file